vault-autounseal.yaml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: botkube
  namespace: kube-vault
  labels:
    component: controller
    app: botkube
spec:
  replicas: 1
  selector:
    matchLabels:
      component: controller
      app: botkube
  template:
    metadata:
      labels:
        component: controller
        app: botkube
    spec:
      serviceAccountName: botkube-sa
      containers:
        - name: botkube
          image: "prasenforu/botkube:v1"
          #image: "infracloudio/botkube:v0.10.0"
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: "/config"
      volumes:
        - name: config-volume
          projected:
            sources:
            - configMap:
                name: botkube-configmap
            - secret:
                name: botkube-communication-secret
      # run as non privilaged user
      securityContext:
        runAsUser: 101
        runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vault
  name: vault-svc
  namespace: kube-vault
spec:
  ports:
  - name: 9000-tcp
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: vault
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vault
  name: vault-autounseal
  namespace: kube-vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      shareProcessNamespace: true
      serviceAccount: vault-sa
      containers:
      - image: prasenforu/ocpscan:9.0
        name: vault
        ports:
        - name: vault
          containerPort: 9000
        volumeMounts:
        - mountPath: /etc/webhook/hooks.json
          subPath: hooks.json
          name: vault-hooks-volume-config
        - mountPath: /etc/webhook/vaultunseal.sh
          subPath: vaultunseal.sh
          name: vault-unseal-script-volume-config
      volumes:
      - configMap:
          defaultMode: 420
          name: vault-hooks-configmap
        name: vault-hooks-volume-config
      - configMap:
          defaultMode: 493
          name: vault-unseal-script-configmap
        name: vault-unseal-script-volume-config
